--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
+    "react-barcode-scanner": "^1.0.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
